lugx-backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lux-gaming
  labels:
    name: lux-gaming
