lugx-backend/k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: lux-gaming
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 80
    targetPort: 3004
    protocol: TCP
  type: ClusterIP
